5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4326/executions/1668_1396.log
== TEST (2019-04-15 19:07:06) 
-- CODE:
valor=int(input("Digite o valor da conta"))
if (conta<==300*(10)):
	
-- ERROR:
File "XXXX", line 2
    if (conta<==300*(10)):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:07:27) 
-- CODE:
valor=int(input("Digite o valor da conta"))
if (conta<==300*(10)):
	
-- ERROR:
File "XXXX", line 2
    if (conta<==300*(10)):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:08:50) 
-- CODE:
valor=int(input("Digite o valor da conta"))
if (conta<==300*(10)):
	
-- ERROR:
File "XXXX", line 2
    if (conta<==300*(10)):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:08:57) 
-- CODE:
valor=int(input("Digite o valor da conta"))
if (conta<==300*(10)):
	
-- EXECUTION TIME:
0.161052
-- ERROR:
  File "/home/codebench/codes/1668/1396/main.py", line 2
    if (conta<==300*(10)):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:10:55) 
-- CODE:
valor=int(input("Digite o valor da conta"))
if (conta <==300+(10):
	 print(round,1)
	
-- ERROR:
File "XXXX", line 2
    if (conta <==300+(10):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:11:06) 
-- CODE:
valor=float(input("Digite o valor da conta"))
if (conta <==300+(10):
	 print(round,1)
	
-- ERROR:
File "XXXX", line 2
    if (conta <==300+(10):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:11:46) 
-- CODE:
valor=float(input("Digite o valor da conta"))
if (conta <==300+10:
	 print(round,conta,1)
	
-- EXECUTION TIME:
0.207597
-- ERROR:
  File "/home/codebench/codes/1668/1396/main.py", line 2
    if (conta <==300+10:
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
